fix: about-us-area content-wrapper sm spacing

--- a/css/style.css
+++ b/css/style.css
@@ -5850,7 +5850,7 @@ body.admin-bar .header-menu-area.sticky_menu {
     padding-left: 32px;
   }
 }
-@media only screen and (min-width: 0px) and (max-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   .about-us-area.style-1 .elementor-container .content-wrapper {
     padding-left: 32px;
   }
