--- a/sass/modules/about-us/_about-us-area.scss
+++ b/sass/modules/about-us/_about-us-area.scss
@@ -411,7 +411,7 @@
                 @include lg{
                     padding-left: 32px;
                 }
-                @media only screen and (min-width: 0px) and (max-width: 768px){
+                @media only screen and (min-width: 768px) and (max-width: 991px){
                     padding-left: 32px;
                 }
             }
